# ComfyUI_GraftingRayman

./: GRImage.py  GRMask.py  GRSigmaPresetSelectorAdvanced.py  GRnodes.py  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
Nodes/: GRAnySelector.py  GRAudioSelector.py  GRBLIP2CaptionGenerator.py  GRBLIP2TextExpander.py  GRColors.py  GRCompositions.py  GRCounter.py  GRDescriptionDB.py  GRDetails.py  GRFilename.py  GRFlorence2CaptionGenerator.py  GRINTIncrement.py  GRImage.py  GRImageMaths.py  GRImageMultiplier.py  GRImageSelector.py  GRLiveGroupController.py  GRLora.py  GRLoraLoader.py  GRMask.py  GRMaths.py  GRMenuHook.py  GRMoods.py  GRObjects.py  GRPanOrZoom.py  GRPrompt.py  GRPromptGenExtended.py  GRPromptGenerator.py  GRPromptReplacer.py  GRPromptViewer.py  GRResolution.py  GRScroller.py  GRSigmaPresetSelector.py  GRSigmaPresetSelectorAdvanced.py  GRSigmas.py  GRStyles.py  GRSubjects.py  GRTextOverlay.py  GRTile.py  GRTime_of_day.py  (+5 more)
Nodes/lora_configs/: node_-1.json  node_151.json  node_158.json  node_39.json
Workflows/: 0005.json - uLJQF6cH.json  1  VideoToPose - RqCDpTPJ.json  2  posetovideo - 9JCRNutL.json  3  upscaleandswap - ank4Rip5.json  AnimateDiffWithDWPose - MPt9WbnU.json  ComfyUISupir - pYFTMrPX.json  GraftingScribbles.json  MaskingWithIPAdapter.json  ModelMerging.json  PortraitMaster2.3 - q2ni5Hsd.json  SEEDVR2_ReadyToUpscale.json  findthethreedifferences.json  grafting scribbles.json  grpanorzoom.json  reactorfaceswap - bDey55U2.json  tagstoimage - ABV9qCic.json  unknown.json
web/js/: GRAnySelector.js  GRAudioSelector.js  (+9 more)
(+6 files in other folders)
